--- a/public.css
+++ b/public.css
@@ -1,6 +1,6 @@
 /* 页眉 */
 div.wide_header{
-	color: rgb(180, 230, 180);
+	background-color: rgb(180, 230, 180);
 	width:  1000px;
 	height: 50px;
 	padding: 10px;
